<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:paddingBottom="20dp">

        <ImageView
            android:id="@+id/details_header_image"
            android:layout_width="match_parent"
            android:layout_height="225dp"
            android:scaleType="centerCrop"
            android:background="@color/divider_gray"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/details_header_image"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/details_title"
                style="@style/DetailsTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="16dp"
                android:freezesText="true"/>


            <TextView
                android:id="@+id/details_subtext"
                style="@style/DetailsSubtitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/details_title"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:freezesText="true"/>


            <TextView
                android:id="@+id/details_summary"
                style="@style/DetailsSummaryStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/details_subtext"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:freezesText="true"/>

        </RelativeLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/details_fab"
            style="@style/DetailsFloatingActionButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/details_header_image"
            app:srcCompat="@drawable/ic_compass_outline_white_48dp" />

    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>